Added plt.figure() to each cell with a plot in examples.

--- a/examples/advanced/nef_summary.ipynb
+++ b/examples/advanced/nef_summary.ipynb
@@ -74,6 +74,7 @@
       "with nengo.Simulator(model) as sim:\n",
       "    sim.run(1.0)\n",
       "\n",
+      "plt.figure()\n",
       "plt.plot(sim.trange(), sim.data[input_probe], lw=2)\n",
       "plt.title(\"Input signal\")\n",
       "plt.xlabel(\"Time (s)\")\n",
@@ -115,6 +116,7 @@
       "with nengo.Simulator(model) as sim:\n",
       "\n",
       "    eval_points, activities = tuning_curves(A, sim)\n",
+      "plt.figure()\n",
       "plt.plot(eval_points, activities, lw=2)\n",
       "plt.xlabel(\"Input signal\")\n",
       "plt.ylabel(\"Firing rate (Hz)\");\n",
@@ -150,6 +152,7 @@
       "with nengo.Simulator(model) as sim:\n",
       "    sim.run(1)\n",
       "\n",
+      "plt.figure()\n",
       "ax = plt.subplot(1, 1, 1)\n",
       "rasterplot(sim.trange(), sim.data[A_spikes], ax)\n",
       "ax.set_xlim(0, 1)\n",
@@ -198,6 +201,7 @@
       "    sim.run(1)\n",
       "\n",
       "scale = 180\n",
+      "plt.figure()\n",
       "for i in range(A.n_neurons):\n",
       "    plt.plot(sim.trange(), sim.data[A_spikes][:,i] - i*scale)\n",
       "plt.xlim(0, 1)\n",
@@ -237,6 +241,7 @@
       "with nengo.Simulator(model) as sim:\n",
       "    sim.run(1)\n",
       "\n",
+      "plt.figure()\n",
       "plt.plot(sim.trange(), sim.data[input_probe], label=\"Input signal\")\n",
       "plt.plot(sim.trange(), sim.data[A_probe], label=\"Decoded estimate\")\n",
       "plt.legend(loc=\"best\")\n",
