--- a/examples/basic/multiplication.ipynb
+++ b/examples/basic/multiplication.ipynb
@@ -203,6 +203,7 @@
      "collapsed": false,
      "input": [
       "# Plot the input signals and decoded ensemble values\n",
+      "plt.figure()\n",
       "plt.plot(sim.trange(), sim.data[A_probe], label=\"Decoded A\")\n",
       "plt.plot(sim.trange(), sim.data[B_probe], label=\"Decoded B\")\n",
       "plt.plot(sim.trange(), sim.data[prod_probe], label=\"Decoded product\")\n",
@@ -295,6 +296,7 @@
       "    sim.run(5)\n",
       "\n",
       "# Plot the input signals and decoded ensemble values\n",
+      "plt.figure()\n",
       "plt.plot(sim.trange(), sim.data[A_probe], label=\"Decoded A\")\n",
       "plt.plot(sim.trange(), sim.data[B_probe], label=\"Decoded B\")\n",
       "plt.plot(sim.trange(), sim.data[prod_probe], label=\"Decoded product\")\n",
