--- a/examples/dynamics/integrator.ipynb
+++ b/examples/dynamics/integrator.ipynb
@@ -157,6 +157,7 @@
      "collapsed": false,
      "input": [
       "# Plot the decoded output of the ensemble\n",
+      "plt.figure()\n",
       "plt.plot(sim.trange(), sim.data[input_probe], label=\"Input\")\n",
       "plt.plot(sim.trange(), sim.data[A_probe], 'k', label=\"Integrator output\")\n",
       "plt.legend();"
