--- a/examples/advanced/matrix_multiplication.ipynb
+++ b/examples/advanced/matrix_multiplication.ipynb
@@ -85,6 +85,7 @@
      "input": [
       "with nengo.Simulator(model) as sim:\n",
       "    sim.run(1)\n",
+      "plt.figure()\n",
       "plt.subplot(1, 2, 1)\n",
       "plt.title('A')\n",
       "plt.plot(sim.trange(dt=0.01), sim.data[A_probe])\n",
@@ -161,6 +162,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "plt.figure()\n",
       "plt.plot(sim.trange(dt=0.01), sim.data[C_probe])\n",
       "plt.title('C');"
      ],
@@ -209,6 +211,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "plt.figure()\n",
       "plt.plot(sim.trange(dt=0.01), sim.data[D_probe])\n",
       "for d in np.dot(Amat, Bmat).flatten():\n",
       "    plt.axhline(d, color='k')\n",
