--- a/examples/basic/addition.ipynb
+++ b/examples/basic/addition.ipynb
@@ -169,6 +169,7 @@
      "input": [
       "# Plot the input signals and decoded ensemble values\n",
       "t = sim.trange()\n",
+      "plt.figure()\n",
       "plt.plot(sim.trange(), sim.data[A_probe], label=\"Decoded Ensemble A\")\n",
       "plt.plot(sim.trange(), sim.data[B_probe], label=\"Decoded Ensemble B\")\n",
       "plt.plot(sim.trange(), sim.data[C_probe], label=\"Decoded Ensemble C\")\n",
