--- a/examples/basic/squaring.ipynb
+++ b/examples/basic/squaring.ipynb
@@ -153,6 +153,7 @@
      "collapsed": false,
      "input": [
       "# Plot the input signal and decoded ensemble values\n",
+      "plt.figure()\n",
       "plt.plot(sim.trange(), sim.data[A_probe],  label='Decoded Ensemble A')\n",
       "plt.plot(sim.trange(), sim.data[B_probe], label='Decoded Ensemble B')\n",
       "plt.plot(sim.trange(), sim.data[sin_probe], label='Input Sine Wave', color='k', linewidth=2.0)\n",
