--- a/examples/dynamics/controlled_oscillator.ipynb
+++ b/examples/dynamics/controlled_oscillator.ipynb
@@ -188,6 +188,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "plt.figure()\n",
       "plt.plot(sim.trange(), sim.data[oscillator_probe])\n",
       "plt.xlabel('Time (s)')\n",
       "plt.legend(['$x_0$', '$x_1$', '$\\omega$']);"
