--- a/examples/networks/integrator_network.ipynb
+++ b/examples/networks/integrator_network.ipynb
@@ -150,6 +150,7 @@
      "collapsed": false,
      "input": [
       "# Plot the decoded output of the ensemble\n",
+      "plt.figure()\n",
       "plt.plot(sim.trange(), sim.data[integrator_probe], label=\"A output\")\n",
       "plt.plot(sim.trange(), sim.data[input_probe], 'k', label=\"Input\")\n",
       "plt.legend(loc=\"best\");"
